--- a/Client/package.json
+++ b/Client/package.json
@@ -13,11 +13,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.0",
+    "@mui/x-charts": "^7.23.2",
     "axios": "^1.7.9",
     "daisyui": "^4.12.22",
     "lucide-react": "^0.469.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
     "zustand": "^5.0.2"
   },
